--- a/app/src/main/res/menu/menu_profile.xml
+++ b/app/src/main/res/menu/menu_profile.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/action_edit"
-        android:icon="@drawable/_basics_30"
-        android:title="Edit"
-        android:visible="true"
-        app:showAsAction="always" />
+        android:title="Edit Profile" />
+    <item
+        android:id="@+id/action_logout"
+        android:title="Logout" />
 
 </menu>
 
