--- a/app/src/main/res/layout/item_in_home.xml
+++ b/app/src/main/res/layout/item_in_home.xml
@@ -84,11 +84,12 @@
                 android:src="@drawable/seo_social_web_network_internet_66" />
 
             <TextView
+                android:id="@+id/number_joined"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="hhhhhhh" />
+                android:text="Joined (0)" />
         </LinearLayout>
 
         <LinearLayout
@@ -102,14 +103,15 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:src="@drawable/profile_group" />
+                android:src="@drawable/amount" />
 
             <TextView
+                android:id="@+id/amount"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="Donaters (0)" />
+                android:text="Amount (0)" />
 
         </LinearLayout>
 
@@ -127,6 +129,7 @@
                 android:src="@drawable/calendar_home" />
 
             <TextView
+                android:id="@+id/end_date"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
