--- a/app/src/main/res/layout/item_in_bottom_hisprofile.xml
+++ b/app/src/main/res/layout/item_in_bottom_hisprofile.xml
@@ -61,12 +61,12 @@
         android:id="@+id/text_details_cause"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_16dp"
+        android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginRight="@dimen/_16dp"
         android:layout_marginTop="@dimen/_8dp"
-        android:text="hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh"
+        android:text="hahahahhah"
         android:textColor="#000000"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/image_ellipse_3"
         app:layout_constraintRight_toRightOf="parent"
@@ -80,7 +80,7 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintLeft_toRightOf="@+id/view3"
