--- a/app/src/main/res/layout/item_in_bottom_joinedprofile.xml
+++ b/app/src/main/res/layout/item_in_bottom_joinedprofile.xml
@@ -5,6 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <TextView
+        android:id="@+id/text_Completed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Completed"
+        app:layout_constraintLeft_toRightOf="@+id/text_name_cause"
+        android:layout_marginLeft="@dimen/_8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#000000"
+        android:visibility="gone"
+        android:layout_marginTop="@dimen/_8dp"
+        android:layout_marginBottom="@dimen/_8dp"
+        app:layout_constraintBottom_toTopOf="@+id/text_details_cause"
+        android:layout_marginRight="@dimen/_8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.942"
+        app:layout_constraintVertical_bias="0.0" />
+
     <View
         android:id="@+id/view3"
         android:layout_width="@dimen/_1dp"
@@ -51,6 +69,7 @@
         android:layout_marginRight="@dimen/_8dp"
         android:layout_marginTop="@dimen/_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/text_name_cause"
         app:layout_constraintRight_toRightOf="parent"
@@ -66,54 +85,10 @@
         android:layout_marginTop="@dimen/_8dp"
         android:text="hahahahhah"
         android:textColor="#000000"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/image_ellipse_3"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_name_cause" />
-
-    <ImageView
-        android:id="@+id/image_edit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_16dp"
-        android:visibility="gone"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintLeft_toRightOf="@+id/view3"
-        app:layout_constraintRight_toLeftOf="@+id/image_close1"
-        app:layout_constraintTop_toBottomOf="@+id/text_details_cause"
-        app:srcCompat="@drawable/edit" />
-
-    <ImageView
-        android:id="@+id/image_delete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_16dp"
-        android:visibility="gone"
-        app:layout_constraintLeft_toRightOf="@+id/image_close1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_details_cause"
-        app:srcCompat="@drawable/delete" />
-
-    <ImageView
-        android:id="@+id/image_close1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_16dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintLeft_toRightOf="@+id/view3"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_details_cause"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/close1" />
 
 </android.support.constraint.ConstraintLayout>
